# balanced-search-trees

./: .gitignore  README.md  candidate.out  g5-demo.trace  pyproject.toml
conversation-logs/: 2026-07-12T15-37-03-019f56f8.md  2026-07-12T15-44-17-019f56fc.md  2026-07-13T01-48-34-019f5928.md  2026-07-13T13-52-42-019f5bbd.md  2026-07-13T16-16-55-019f5c44.md  2026-07-16T03-30-34-019f68f9.md  README.md
docs/: carga-de-trabalho-grupo-5.html  estudo-empirico-grupo-5-piloto.json  estudo-empirico-grupo-5-relatorio.json  estudo-empirico-grupo-5-validacao-1m.json  grupo-5-arvore-aumentada.html  implementacao-grupo-5.html  operacoes-arvore-grupo-5.html  plano-implementacao-grupo-5.html  plano-implementacao-grupo-5.md  revisao-interativa-relatorio-grupo-5.html
report/: report.tex
report/report/: report.tex  revisao-resultados.md
results/: estudo-empirico-grupo-5-relatorio.csv
results/traces-relatorio/: escala-1e3-9e07c455a0456de5.complete  escala-1e3-9e07c455a0456de5.expected  escala-1e3-9e07c455a0456de5.trace  escala-1e3-e2b7aba098c4b5e9.complete  escala-1e3-e2b7aba098c4b5e9.expected  escala-1e3-e2b7aba098c4b5e9.trace  escala-1e4-311360722f28d6c9.complete  escala-1e4-311360722f28d6c9.expected  escala-1e4-311360722f28d6c9.trace  escala-1e4-7a5b153e3a1f258c.complete  (+28 more)
src/: augmented_avl.py  benchmark.py  helper_functions.py  plot_results.py  run_experiments.py  run_trace.py  workload_generator.py
tests/: test_augmented_avl.py  test_benchmark.py  test_helper_functions.py  test_plot_results.py  test_run_experiments.py  test_run_trace.py  test_workload_generator.py
